# cuddle-currents

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: app.yaml  devices.yaml
docs/superpowers/: roadmap.md
docs/superpowers/plans/: 2026-07-19-esp32-gateway-poc.md  2026-07-20-level-b-orchestration.md  2026-07-21-gateway-ota.md
docs/superpowers/specs/: 2026-07-19-esp32-gateway-design.md  2026-07-20-level-b-orchestration-design.md  2026-07-21-gateway-ota-design.md
firmware/: .gitignore
firmware/gateway/: README.md  gateway.ino  secrets.h.example
firmware/gateway-idf/: .gitignore  CMakeLists.txt  README.md  activate.sh  partitions.csv  sdkconfig.defaults  setup-components.sh
firmware/gateway-idf/main/: CMakeLists.txt  idf_component.yml  main.cpp  secrets.h.example
frontend/: VIZ_DATA_REFERENCE.md  dev.html  ops.html  show.html  theme.css
frontend/assets/emitters/: aura.json  example.json  joinBurst.json  ringBurst.json  shiney01.json
frontend/js/: shapes.js  store.js  ws.js
src/cuddle/: app.py  cli.py
tests/: test_artifact.py  test_baseline.py  test_ble_parser.py  test_ble_source.py  test_cli_mqtt.py  test_config.py  test_enrollment.py  test_mock_gateway.py  test_mock_gateway_multi.py  test_mqtt_source.py  test_orchestration_frame.py  test_orchestration_plan.py  test_orchestration_world.py  test_orchestrator.py  test_ota.py  test_reconnect.py  test_registry.py  test_sim_scenarios.py  test_synchrony.py  test_ws_orchestrator_routes.py  test_ws_ota.py
tools/: mock_gateway.py  mock_gateway_coverage.example.json
(+41 files in other folders)
